@@ -144,7 +144,6 @@ public class HColumnDescriptor implements WritableComparable {
    * The other attributes are defaulted.
    * 
    * @param columnName - column family name
-   * @deprecated Use String or byte [] overload instead
    */
   public HColumnDescriptor(final Text columnName) {
     this(columnName.getBytes());
@@ -342,7 +341,9 @@ public class HColumnDescriptor implements WritableComparable {
   public void readFields(DataInput in) throws IOException {
     int versionNumber = in.readByte();
     if (versionNumber <= 2) {
-      this.name = Bytes.readByteArray(in);
+      Text t = new Text();
+      t.readFields(in);
+      this.name = t.getBytes();
       if (HStoreKey.getFamilyDelimiterIndex(this.name) > 0) {
         this.name = stripColon(this.name);
       }
