@@ -45,6 +45,8 @@ Release 0.2.1 - Unreleased
    HBASE-826   delete table followed by recreation results in honked table
    HBASE-834   'Major' compactions and upper bound on files we compact at any
                one time (Billy Pearson via Stack)
+   HBASE-858   HBase-799 Created an error in util.migration.v5.HColumnDescriptor
+               (Jean-Daniel Cryans via Stack)
 
   IMPROVEMENTS
    HBASE-801  When a table haven't disable, shell could response in a "user
